Introduction the Outbox Pattern.